# growth-pricing-forecasting

./: README.md
customer-segmentation-retention/: .gitignore  README.md  customer_segmentation_retention.ipynb  main.py  pyproject.toml
customer-segmentation-retention/src/: __init__.py  features.py  modeling.py
demand-forecasting-timeseries/: README.md  demand_forecasting_timeseries.executed.ipynb  demand_forecasting_timeseries.ipynb  main.py  pyproject.toml
demand-forecasting-timeseries/src/: __init__.py  backtest.py  forecast_models.py
insurance-cross-sell-targeting/: README.md  insurance_cross_sell_targeting.executed.ipynb  insurance_cross_sell_targeting.ipynb  pyproject.toml
insurance-cross-sell-targeting/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
insurance-cross-sell-targeting/scripts/: download_data.sh  run_notebook.sh
insurance-cross-sell-targeting/src/: data_prep.py  evaluation.py  features.py  modeling.py  targeting.py
marketplace-pricing-intelligence/: README.md  marketplace_pricing_intelligence.ipynb  pyproject.toml
marketplace-pricing-intelligence/app/: main.py
marketplace-pricing-intelligence/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
marketplace-pricing-intelligence/catboost_info/learn/: events.out.tfevents
marketplace-pricing-intelligence/scripts/: download_data.sh  run_api.sh  run_notebook.sh
marketplace-pricing-intelligence/src/: data_prep.py  evaluation.py  features.py  modeling.py
personalized-hotel-ranking-engine/: README.md  personalized_hotel_ranking_engine.executed.ipynb  personalized_hotel_ranking_engine.ipynb  pyproject.toml
personalized-hotel-ranking-engine/app/: main.py
personalized-hotel-ranking-engine/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
personalized-hotel-ranking-engine/scripts/: download_data.sh  run_api.sh  run_notebook.sh
personalized-hotel-ranking-engine/src/: data_prep.py  evaluation.py  features.py  ranking.py
retail-demand-forecasting-ops/: README.md  pyproject.toml  retail_demand_forecasting_ops.executed.ipynb  retail_demand_forecasting_ops.ipynb
retail-demand-forecasting-ops/catboost_info/: catboost_training.json  (+2 more)
(+11 files in other folders)
