[project]
name = "customer-segmentation-retention"
version = "0.1.0"
description = "Customer segmentation and retention analytics project with ranking-based model selection."
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "flaml==2.6.0",
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "kaggle==1.7.4.5",
    "lazypredict==0.3.0",
    "matplotlib==3.10.9",
    "numpy==1.26.4",
    "pandas==3.0.3",
    "protobuf==3.20.3",
    "pycaret==4.0.0a8",
    "scikit-learn==1.9.0",
    "seaborn==0.13.2",
    "xgboost==2.1.1",
]
