[project]
name = "demand-forecasting-timeseries"
version = "0.1.0"
description = "Business-oriented demand forecasting with classical, ML, and AutoML tracks."
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "flaml[automl]>=2.6.0",
    "holidays>=0.98",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lazypredict>=0.3.0",
    "matplotlib>=3.7.5",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "prophet>=1.3.0",
    "pycaret>=4.0.0a8,<4.1",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13.2",
    "sktime>=0.26.0",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
deep-learning = [
    "torch>=2.3.0",
]
