[project]
name = "marketplace-pricing-intelligence"
version = "0.1.0"
description = "Marketplace pricing intelligence with text + structured features"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
  "pandas>=2.1,<2.2",
  "numpy>=1.26.4,<2.0",
  "scikit-learn>=1.3,<1.5",
  "xgboost>=2.1.1",
  "lightgbm>=4.5.0",
  "catboost>=1.2.5",
  "lazypredict>=0.2.13",
  "flaml[automl]>=2.3.2",
  "pycaret>=3.3.2",
  "matplotlib>=3.6,<3.8",
  "seaborn>=0.13.2",
  "scipy>=1.10,<1.12",
  "shap>=0.46.0",
  "statsmodels>=0.14.3",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "joblib>=1.3,<1.4",
  "jupyter>=1.1.1",
  "ipykernel>=6.29.5",
  "py7zr>=1.1.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
